package com.ghostwriter.export;

import com.ghostwriter.analysis.Summary;
import java.util.Map;

/**
 * Concrete Decorator that formats summaries using Markdown syntax.
 * Wraps a SummaryFormatter and adds Markdown-specific formatting.
 * 
 * Markdown features:
 * - # Headers for sections
 * - **Bold** for emphasis
 * - - Bullet lists for items
 * - [ ] Checkboxes for action items
 * 
 * @author Mihail Chitorog
 * @version 1.0
 */
public class MarkdownDecorator extends SummaryFormatterDecorator {
    
    /**
     * Constructs a Markdown decorator.
     * 
     * @param formatter The formatter to wrap
     */
    public MarkdownDecorator(SummaryFormatter formatter) {
        super(formatter);
    }
    
    /**
     * Format summary with Markdown syntax.
     * Overrides the wrapped formatter's output with Markdown-enhanced version.
     * 
     * @param summary The summary to format
     * @return Markdown-formatted string
     */
    @Override
    public String format(Summary summary) {
        StringBuilder sb = new StringBuilder();
        
        // Header with Markdown syntax
        sb.append("# Daily Summary - ").append(summary.getDate()).append("\n\n");
        
        // Message Statistics section
        sb.append("## 📊 Message Statistics\n\n");
        
        Map<String, Object> stats = summary.getStatistics();
        Object totalMessages = stats.getOrDefault("total_messages", 0);
        sb.append("- **Total Messages:** ").append(totalMessages).append("\n");
        
        if (stats.containsKey("most_active")) {
            sb.append("- **Most Active:** ").append(stats.get("most_active")).append("\n");
        }
        
        sb.append("\n");
        
        // Key Topics section
        sb.append("## 🔑 Key Topics Discussed\n\n");
        if (summary.getKeyTopics().isEmpty()) {
            sb.append("*No specific topics identified*\n\n");
        } else {
            for (String topic : summary.getKeyTopics()) {
                sb.append("- ").append(topic).append("\n");
            }
            sb.append("\n");
        }
        
        // Action Items section
        if (!summary.getActionItems().isEmpty()) {
            sb.append("## ⚡ Action Items\n\n");
            for (String item : summary.getActionItems()) {
                sb.append("- [ ] ").append(item).append("\n");
            }
            sb.append("\n");
        }
        
        // Pending Questions section
        if (!summary.getPendingQuestions().isEmpty()) {
            sb.append("## ❓ Pending Questions\n\n");
            for (String question : summary.getPendingQuestions()) {
                sb.append("- ").append(question).append("\n");
            }
            sb.append("\n");
        }
        
        // Footer
        sb.append("---\n");
        sb.append("*Generated by GhostWriter AI*\n");
        
        return sb.toString();
    }
    
    /**
     * Get file extension for Markdown format.
     * 
     * @return ".md"
     */
    @Override
    public String getFileExtension() {
        return ".md";
    }
}
