package com.ghostwriter.export;

import com.ghostwriter.analysis.Summary;
import java.util.Map;

/**
 * Concrete Component in the Decorator pattern.
 * Provides basic plain text formatting for summaries.
 * This is the base implementation that decorators can wrap.
 * 
 * @author Mihail Chitorog
 * @version 1.0
 */
public class PlainTextFormatter implements SummaryFormatter {
    
    /**
     * Format summary as plain text.
     * 
     * @param summary The summary to format
     * @return Plain text formatted string
     */
    @Override
    public String format(Summary summary) {
        StringBuilder sb = new StringBuilder();
        
        // Header
        sb.append("DAILY SUMMARY - ").append(summary.getDate()).append("\n");
        sb.append("=".repeat(50)).append("\n\n");
        
        // Message Statistics
        sb.append("MESSAGE STATISTICS\n");
        sb.append("-".repeat(50)).append("\n");
        
        Map<String, Object> stats = summary.getStatistics();
        Object totalMessages = stats.getOrDefault("total_messages", 0);
        sb.append("Total Messages: ").append(totalMessages).append("\n");
        
        if (stats.containsKey("most_active")) {
            sb.append("Most Active: ").append(stats.get("most_active")).append("\n");
        }
        
        sb.append("\n");
        
        // Key Topics
        sb.append("KEY TOPICS DISCUSSED\n");
        sb.append("-".repeat(50)).append("\n");
        if (summary.getKeyTopics().isEmpty()) {
            sb.append("No specific topics identified\n");
        } else {
            for (int i = 0; i < summary.getKeyTopics().size(); i++) {
                sb.append((i + 1)).append(". ").append(summary.getKeyTopics().get(i)).append("\n");
            }
        }
        sb.append("\n");
        
        // Action Items
        if (!summary.getActionItems().isEmpty()) {
            sb.append("ACTION ITEMS\n");
            sb.append("-".repeat(50)).append("\n");
            for (String item : summary.getActionItems()) {
                sb.append("- ").append(item).append("\n");
            }
            sb.append("\n");
        }
        
        // Pending Questions
        if (!summary.getPendingQuestions().isEmpty()) {
            sb.append("PENDING QUESTIONS\n");
            sb.append("-".repeat(50)).append("\n");
            for (String question : summary.getPendingQuestions()) {
                sb.append("? ").append(question).append("\n");
            }
            sb.append("\n");
        }
        
        // Footer
        sb.append("=".repeat(50)).append("\n");
        sb.append("Generated by GhostWriter AI\n");
        
        return sb.toString();
    }
    
    /**
     * Get file extension for plain text format.
     * 
     * @return ".txt"
     */
    @Override
    public String getFileExtension() {
        return ".txt";
    }
}
